src/objects/WebStoresData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Apply_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the site should have restrictions applied to it or not</description>
        <label>Apply Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Sale_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, attempt to apply sale offer for inbound orders</description>
        <label>Apply Sale Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Order_Adjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Order Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Associated letter for a web store&apos;s payment type.</description>
        <label>Payment Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Suffix__c</fullName>
        <label>Product Suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>The sales channel to be displayed. Such as Amazon JP, Brand Website, etc.</description>
        <label>Sales Channel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Prefix__c</fullName>
        <description>Prefix that is sent to AS400 submission in the Brand field</description>
        <label>Server Prefix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Web Stores Data</label>
</CustomObject>